# RT

./: CMakeLists.txt  Makefile  README.md  RT.h  rt.h  test.c  tutorial.c
src/: Makefile  RT.h  RTv1.h  author  camera.c  camera_create.c  camera_validate.c  color.c  draw.c  etc_1.c  etc_2.c  geometric_create.c  light_create.c  light_update.c  light_validate.c  lighting.c  main.c  objects_calculate.c  objects_create.c  objects_fill.c  objects_update.c  objects_update_min.c  objects_validate.c  operations_d.c  operations_v.c  scene_extra.c  scene_get.c  transform.c
src/sdl2/: ft_sdl2_main.c
src/sdl2/keys/: ft_sdl2_key_quit.c
